--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
     - docker 
 
 before_install:
-    - docker build -f -t mj/docker-react Dockerfile.dev .
+    - docker build -t mj/docker-react -f Dockerfile.dev .
 
 script:
     - docker run mj/docker-react  npm run test -- --coverage
